force-app/main/default/objects/Tabla_Payment_Term__c/Tabla_Payment_Term__c.object-meta.xml
<CustomObject>
    <label>Tabla Payment Term</label>
    <nameField>
        <label>Payment Term</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tabla Payment Term</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>