force-app/main/default/objects/Tabla_Payment_Term__c/fields/AUX__c.field-meta.xml
<CustomField>
    <fullName>AUX__c</fullName>
    <label>AUX</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>