force-app/main/default/objects/Tabla_Payment_Term__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount (%)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>