force-app/main/default/objects/Tabla_Payment_Term__c/fields/Without_Bank_Note__c.field-meta.xml
<CustomField>
    <fullName>Without_Bank_Note__c</fullName>
    <label>Without Bank Note Adj.</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>