force-app/main/default/objects/Tabla_Payment_Term__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AUX__c</columns>
    <columns>NAME</columns>
    <columns>Discount__c</columns>
    <columns>With_Bank_Note__c</columns>
    <columns>Without_Bank_Note__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>